--- a/views/layout.html
+++ b/views/layout.html
@@ -9,7 +9,7 @@
       <script src="/js/polyfills.min.js"></script>
     <![endif]-->
 </head>
-<body ng-app="CleganeApp" ng-cloak>
+<body>
   <nav class="navbar navbar-inverse" style="margin-bottom:0px;border-radius:0px;">
     <div class="container">
       <div class="navbar-header">
