add harvest fields on signup

--- a/views/layout.html
+++ b/views/layout.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>{% block title %}Clegane{% endblock %}</title>
+    <title>{% block title %}Time Budget{% endblock %}</title>
     <link href="/css/vendors.min.css" rel="stylesheet">
     <link href="/css/main.css" rel="stylesheet">
     <!--[if lt IE 9]>
@@ -71,7 +71,7 @@
     <script src="/js/angular-app.js"></script>
   {% endblock %}
   <script type='text/javascript' id="__bs_script__">//<![CDATA[
-    document.write("<script async src='http://HOST:3001/browser-sync/browser-sync-client.2.8.2.js'><\/script>".replace("HOST", location.hostname));
-//]]></script>
+      document.write("<script async src='http://HOST:3003/browser-sync/browser-sync-client.2.9.3.js'><\/script>".replace("HOST", location.hostname));
+  //]]></script>
 </body>
 </html>
