--- a/views/user/signup.html
+++ b/views/user/signup.html
@@ -6,6 +6,7 @@
     <h1>Signup</h1>
     <div class="spacer spacer-sm"></div>
     <form action="/signup" method="post">
+      <h3>User informations</h3>
       <div class="form-group">
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" class="form-control" required />
@@ -18,6 +19,24 @@
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" class="form-control" required />
       </div>
+      <hr>
+      <h3>Harvest</h3>
+      <div class="form-group">
+        <label for="harvest_subdomain">Harvest subdomain:</label>
+        <div class="input-group">
+          <input type="text" id="harvest_subdomain" name="harvest_subdomain" class="form-control" required />
+          <span class="input-group-addon">.harvestapp.com</span>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="harvest_email">Harvest Email:</label>
+        <input type="email" id="harvest_email" name="harvest_email" class="form-control" required />
+      </div>
+      <div class="form-group">
+        <label for="harvest_password">Harvest password:</label>
+        <input type="password" id="harvest_password" name="harvest_password" class="form-control" required />
+      </div>
+      <hr>
       <div class="form-group">
         <input type="submit" value="Submit" class="btn btn-primary"/>
       </div>
